# AdvGameBench

./: .gitignore  LLMs.py  README.md  pyproject.toml  requirements.txt  run_all.py
Auto-battler/: battle.py  evaluator.py  init.py
Auto-battler/example_placement/: defender_example.json  invader_example.json
Auto-battler/game_scripts/: battle.py  main.py  models.py  skills.py  team.py
Tower Defense/: battle.py  evaluator.py  init.py  test.ipynb
Tower Defense/example_placement/: demon_example.json
Tower Defense/game_scripts/: demon.json  demon.py  human.json  prompt.py  run.py
Tower_Defense/: battle.py  calculator.py  evaluator.py  init.py  prompt.py
Tower_Defense/example_placement/: demon_example.json  human_example.json
Tower_Defense/game_scripts/: constants.py  human.py
Turn-based/: ask.py  battle.py  calculator.py  evaluator.py  extract_information.py  init.py  prompt.py
Turn-based/game_scripts/: board.py  constants.py  defenders.json  invaders.json  main.py  minions.py  models.py  prompt.py  run.py  skills.py  status.py  team.py
advgamebench/: cli.py
advgamebench/Auto-battler/: battle.py  calculator.py  evaluator.py  init.py
advgamebench/Auto-battler/example_placement/: defender_example.json
advgamebench/Auto-battler/game_scripts/: run.py
advgamebench/Tower_Defense/: battle.py  calculator.py  extract_information.py  init.py
advgamebench/Turn-based/: ask.py  extract_information.py  init.py
src/advgamebench/: cli.py
src/advgamebench/core/: LLMs.py
